--- a/team20/src/styles/globals.css
+++ b/team20/src/styles/globals.css
@@ -130,6 +130,23 @@ nav{
   align-items: center;
   background-color: #1257c0;
 }
+
+nav-dark{
+  display: flex;
+  padding: 16px;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #000000;
+}
+
+nav-light{
+  display: flex;
+  padding: 16px;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffff;
+}
+
 .nav__menu-bar{
   display: flex;
   flex-direction: column;
