Added UI changes

--- a/team20/src/styles/globals.css
+++ b/team20/src/styles/globals.css
@@ -128,7 +128,7 @@ nav{
   padding: 16px;
   justify-content: space-between;
   align-items: center;
-  background-color: #1257c0;
+  background-color: #3d4046;
 }
 
 nav-dark{
